// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps should change finish icon when using finish-icon prop 1`] = `
<div
  class="rc-hairline rc-step rc-step--horizontal rc-step--finish"
>
  <div
    class="rc-step__title"
  >
    A
  </div>
  <div
    class="rc-step__circle-container"
  >
    <i
      class="rc-badge__wrapper rc-step__icon rc-step__icon--finish van-icon van-icon-foo"
    />
  </div>
  <div
    class="rc-step__line"
  />
</div>
`;

exports[`Steps should change inactive color when using inactive-color prop 1`] = `
<div>
  <div
    class="rc-steps rc-steps--horizontal"
  >
    <div
      class="rc-steps__items"
    >
      <div
        class="rc-hairline rc-step rc-step--horizontal rc-step--process"
      >
        <div
          class="rc-step__title rc-step__title--active"
        >
          A
        </div>
        <div
          class="rc-step__circle-container"
        >
          <i
            class="rc-badge__wrapper rc-step__icon rc-step__icon--active van-icon van-icon-checked"
          />
        </div>
        <div
          class="rc-step__line"
          style="background: red;"
        />
      </div>
      <div
        class="rc-hairline rc-step rc-step--horizontal rc-step--waiting"
      >
        <div
          class="rc-step__title"
          style="color: red;"
        >
          B
        </div>
        <div
          class="rc-step__circle-container"
        >
          <i
            class="rc-step__circle"
            style="background: red;"
          />
        </div>
        <div
          class="rc-step__line"
          style="background: red;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps should change inactive icon when using inactive-icon prop 1`] = `
<div>
  <div
    class="rc-steps rc-steps--horizontal"
  >
    <div
      class="rc-steps__items"
    >
      <div
        class="rc-hairline rc-step rc-step--horizontal rc-step--process"
      >
        <div
          class="rc-step__title rc-step__title--active"
        >
          A
        </div>
        <div
          class="rc-step__circle-container"
        >
          <i
            class="rc-badge__wrapper rc-step__icon rc-step__icon--active van-icon van-icon-checked"
          />
        </div>
        <div
          class="rc-step__line"
        />
      </div>
      <div
        class="rc-hairline rc-step rc-step--horizontal rc-step--waiting"
      >
        <div
          class="rc-step__title"
        >
          B
        </div>
        <div
          class="rc-step__circle-container"
        >
          <i
            class="rc-badge__wrapper rc-step__icon van-icon van-icon-foo"
          />
        </div>
        <div
          class="rc-step__line"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps should render correctly 1`] = `
<div>
  <div
    class="rc-steps rc-steps--horizontal"
  >
    <div
      class="rc-steps__items"
    >
      <div
        class="rc-hairline rc-step rc-step--horizontal rc-step--process"
      >
        <div
          class="rc-step__title rc-step__title--active"
        >
          B
        </div>
        <div
          class="rc-step__circle-container"
        >
          <i
            class="rc-badge__wrapper rc-step__icon rc-step__icon--active van-icon van-icon-checked"
          />
        </div>
        <div
          class="rc-step__line"
        />
      </div>
      <div
        class="rc-hairline rc-step rc-step--horizontal rc-step--waiting"
      >
        <div
          class="rc-step__title"
        >
          A
        </div>
        <div
          class="rc-step__circle-container"
        >
          <i
            class="rc-step__circle"
          />
        </div>
        <div
          class="rc-step__line"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps should render custom icon correctly 1`] = `
<div>
  <div
    class="rc-steps rc-steps--horizontal"
  >
    <div
      class="rc-steps__items"
    >
      <div
        class="rc-hairline rc-step rc-step--horizontal rc-step--finish"
      >
        <div
          class="rc-step__title"
        >
          B
        </div>
        <div
          class="rc-step__circle-container"
        >
          <i
            class="rc-badge__wrapper van-icon van-icon-finish"
          />
        </div>
        <div
          class="rc-step__line"
        />
      </div>
      <div
        class="rc-hairline rc-step rc-step--horizontal rc-step--process"
      >
        <div
          class="rc-step__title rc-step__title--active"
        >
          A
        </div>
        <div
          class="rc-step__circle-container"
        >
          <i
            class="rc-badge__wrapper van-icon van-icon-success"
          />
        </div>
        <div
          class="rc-step__line"
        />
      </div>
      <div
        class="rc-hairline rc-step rc-step--horizontal rc-step--waiting"
      >
        <div
          class="rc-step__title"
        >
          C
        </div>
        <div
          class="rc-step__circle-container"
        >
          <i
            class="rc-badge__wrapper van-icon van-icon-fail"
          />
        </div>
        <div
          class="rc-step__line"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps should render icon-prefix correctly 1`] = `
<div
  class="rc-hairline rc-step rc-step--horizontal rc-step--finish"
>
  <div
    class="rc-step__title"
  >
    A
  </div>
  <div
    class="rc-step__circle-container"
  >
    <i
      class="rc-step__circle"
    />
  </div>
  <div
    class="rc-step__line"
  />
</div>
`;
